UI Changes. New Styles

--- a/css/mobile.css
+++ b/css/mobile.css
@@ -1,27 +1,24 @@
 
 header {
-	height: 50px;
+	height: 45px;
 	border-bottom: 1px solid rgba(101,61,31,0.55);
+	overflow: hidden;
+    position: relative;
+    width: 100%;
 }
 
 header .nav-bar {
-	float: left;
-	width: 20%;
-	line-height: 50px;
-}
-
-.nav-bar .menu-icon {
-	display: inline-block;
-	width: 40%;
+	height: 100%;
+    position: absolute;
+    left: 0;
 }
 
 header .heading {
 	font-family: HelveticaNeue;
 	font-size: 2em;
 	color: #512209;
-	height: 50px;
 	line-height: 38px;
-	width: 60%;
+	width: 100%;
 	text-align: center;
 	margin: 0 auto;
 	float: left;
@@ -29,19 +26,28 @@ header .heading {
 
 header .app-icon {
 	width: 20%;
-	height: 50px;
-	line-height: 50px;
-	float: left;
+	height: 100%;
+    position: absolute;
+    right: 0;
+}
+
+
+.menu-icon {
+	display: inline-block;
+	width: 35px;
+	height: 35px;
+	margin-left: 10px;
+	margin-top: 10px;
 }
 
 .app-icon .icon {
 	float: right;
 	margin-right: 10px;
+	margin-top: 10px;
 	width: 30%;
 }
 
-.nav-bar ul {
-	display: none;
+.nav-bar-expanded ul {
 	list-style-type:none;
 	margin:0;
 	padding:0;
@@ -49,7 +55,7 @@ header .app-icon {
 
 .nav > li {
 	background: rgba(86,48,28,0.96);
-	border: 1px solid #979797;
+	border-bottom: 1px solid #979797;
 	-moz-box-shadow: 0px 2px 4px 0px rgba(0,0,0,0.50);
 	box-shadow:0px 2px 4px 0px rgba(0,0,0,0.50);
 }
@@ -62,4 +68,94 @@ header .app-icon {
 	color: #FFFFFF;
 	line-height: 38px;
 	text-align: center;
+}
+
+.nav-bar-expanded {
+	display: none;
+	height: 100%;
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 60%;
+    min-width: 40px;
+}
+
+.notification-bubble {
+	display: inline-block;
+	width: 20px;
+	height: 20px;
+	background-image: url(../img/Oval_41.png);
+	background-size: cover;
+    background-repeat: no-repeat;
+}
+
+.content {
+	margin-left: 3%;
+	margin-right: 3%;
+	margin-top: 20px;
+}
+
+.event-list ul {
+	list-style-type:none;
+	padding:0;
+}
+
+.event-box {
+	border-radius: 4px;
+	/* Rectangle 16: */
+	background: #FABC00;
+	border: 1px solid #653D1F;
+}
+
+.event-box-shadow {
+	-moz-box-shadow: 0px 2px 4px 0px rgba(0,0,0,0.50), inset 0px 1px 3px 0px rgba(0,0,0,0.50);
+	box-shadow: 0px 2px 4px 0px rgba(0,0,0,0.50), inset 0px 1px 3px 0px rgba(0,0,0,0.50);
+}
+
+.event-box .info {
+	display: inline-block;
+	width: 90%;
+}
+
+.event-box .link { 
+	width: 5%;
+	text-decoration: none;
+	float: right;
+	margin: 0px; 
+	display: block; 
+	height: 100%; 
+	vertical-align: middle;
+}
+
+.event-box .link a {
+	text-decoration: none;
+	height: 100%; 
+}
+
+.event-box .name {
+	font-family: HelveticaNeue;
+	font-size: 24px;
+	color: #512209;
+	line-height: 34px;
+}
+
+.event-box .time {
+	font-family: HelveticaNeue;
+	font-size: 20px;
+	color: #72472B;
+	line-height: 30px;
+}
+
+.event-box .place {
+	font-family: HelveticaNeue;
+	font-size: 20px;
+	color: #72472B;
+	line-height: 30px;
+}
+
+.event-details .details p {
+	font-family: HelveticaNeue;
+	font-size: 23px;
+	color: #512209;
+	line-height: 25px;
 }
