--- a/css/mobile.css
+++ b/css/mobile.css
@@ -1,5 +1,7 @@
 
 header {
+	position: absolute;
+	top: 0;
 	height: 45px;
 	border-bottom: 1px solid rgba(101,61,31,0.55);
 	overflow: hidden;
@@ -100,53 +102,44 @@ header .app-icon {
 	padding:0;
 }
 
-.event-box {
+.generic-box {
 	border-radius: 4px;
 	/* Rectangle 16: */
 	background: #FABC00;
 	border: 1px solid #653D1F;
 }
 
-.event-box-shadow {
+.generic-box-shadow {
 	-moz-box-shadow: 0px 2px 4px 0px rgba(0,0,0,0.50), inset 0px 1px 3px 0px rgba(0,0,0,0.50);
 	box-shadow: 0px 2px 4px 0px rgba(0,0,0,0.50), inset 0px 1px 3px 0px rgba(0,0,0,0.50);
 }
 
-.event-box .info {
+.generic-box .info {
 	display: inline-block;
-	width: 90%;
 }
 
-.event-box .link { 
-	width: 5%;
+.generic-box .link { 
+}
+
+.generic-box .link a {
 	text-decoration: none;
-	float: right;
-	margin: 0px; 
-	display: block; 
-	height: 100%; 
-	vertical-align: middle;
 }
 
-.event-box .link a {
-	text-decoration: none;
-	height: 100%; 
-}
-
-.event-box .name {
+.generic-box .name {
 	font-family: HelveticaNeue;
 	font-size: 24px;
 	color: #512209;
 	line-height: 34px;
 }
 
-.event-box .time {
+.generic-box .time {
 	font-family: HelveticaNeue;
 	font-size: 20px;
 	color: #72472B;
 	line-height: 30px;
 }
 
-.event-box .place {
+.generic-box .place {
 	font-family: HelveticaNeue;
 	font-size: 20px;
 	color: #72472B;
