--- a/css/static-styles.css
+++ b/css/static-styles.css
@@ -6,7 +6,7 @@
 .width25pct { width: 25%; }
 .width20pct { width: 20%; }
 .width15pct { width: 15%; }
-.width10pct { /* width: 10%; */ }
+.width10pct { width: 10%; }
 .width5pct { width: 5%; }
 
 .fl-left { float: left; }
