--- a/css/common.css
+++ b/css/common.css
@@ -1,5 +1,5 @@
 
-html, body {min-width: 100%; min-height: 100%;}
+html, body { min-width: 100%; }
 h1,h2,h3,h4,h5,h6 {text-decoration: none; font-size: 1em; font-weight: normal;}
 
 html, body {
