--- a/css/mobile.css
+++ b/css/mobile.css
@@ -1,3 +1,6 @@
+body {
+	padding-top: 40px;
+}
 
 header {
 	position: fixed; 
@@ -92,7 +95,6 @@ header .app-icon {
 }
 
 .content {
-	padding-top: 40px;
 	margin-left: 3%;
 	margin-right: 3%;
 	margin-top: 20px;
