--- a/css/common.css
+++ b/css/common.css
@@ -1,19 +1,17 @@
 
 html, body { min-width: 100%; }
 h1,h2,h3,h4,h5,h6 {text-decoration: none; font-size: 1em; font-weight: normal;}
+ul {list-style: none;padding:0;margin: 0}
 
 html, body {
 	margin: 0;
 	background-color: #FA8C00;
 	overflow: hidden;
 	font-family: HelveticaNeue;
-	padding-bottom: 40px;
 }
 
 footer {
 	width: 100%;
-	position: fixed;
-	bottom: 0;
 }
 
 img {
