--- a/css/common.css
+++ b/css/common.css
@@ -1,5 +1,5 @@
 
-html, body { min-width: 100%; }
+html, body { min-width: 100%; min-height: 100%;}
 h1,h2,h3,h4,h5,h6 {text-decoration: none; font-size: 1em; font-weight: normal;}
 ul {list-style: none;padding:0;margin: 0}
 
@@ -12,6 +12,8 @@ html, body {
 
 footer {
 	width: 100%;
+	position: absolute; 
+	bottom: 0;
 }
 
 img {
