--- a/css/common.css
+++ b/css/common.css
@@ -1,7 +1,8 @@
 
 html, body { min-width: 100%; min-height: 100%;}
 h1,h2,h3,h4,h5,h6 {text-decoration: none; font-size: 1em; font-weight: normal;}
-ul {list-style: none;padding:0;margin: 0}
+ul {list-style: none;padding:0;margin: 0;}
+p {padding:0;margin: 0;}
 
 html, body {
 	margin: 0;
