--- a/css/static-styles.css
+++ b/css/static-styles.css
@@ -9,6 +9,15 @@
 .width10pct { width: 10%; }
 .width5pct { width: 5%; }
 
+.width90px { width: 90px; }
+.width80px { width: 80px; }
+.width75px { width: 75px; }
+.width50px { width: 40px; }
+.width25px { width: 25px; }
+.width20px { width: 20px; }
+.width15px { width: 15px; }
+.width10px { width: 10px; }
+
 .fl-left { float: left; }
 
 .fl-right { float: right; }
