--- a/css/mobile.css
+++ b/css/mobile.css
@@ -60,13 +60,17 @@ header .app-icon {
 	box-shadow:0px 2px 4px 0px rgba(0,0,0,0.50);
 }
 
+
+.nav > li.item {
+	padding: 15px 0 15px 0;
+}
+
 .nav > li > a {
 	display: block;
 	text-decoration: none;
 	font-family: HelveticaNeue;
 	font-size: 1em;
 	color: #FFFFFF;
-	line-height: 40px;
 	margin-left: 60px;
 }
 
